deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gksmmf031/rakuraku:58
          ports:
            - containerPort: 8085
          volumeMounts:
            - name: ssh-key-volume
              mountPath: /app/.ssh
              readOnly: false
      volumes:
        - name: ssh-key-volume
          secret:
            secretName: mongo-ssh-key
