ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rakuraku-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:941377151595:certificate/19e44143-2bad-41c1-9094-d73daee741d9"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: "8085"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  ingressClassName: alb
  rules:
  - host: han0321.shop  # 여기에 도메인 설정
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rakuraku-svc  # 연결할 서비스 이름
            port:
              number: 80
